--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,20 @@ services:
       - ./:/emulator
     ports:
       - "3333:3333"
-    command:
-      - "npm"
-      - "run"
-      - "dev"
+    tty: true
+    labels:
+      - dev.orbstack.http-port=3333
+    depends_on:
+      - db
+
+  db:
+    image: mariadb:10.11
+    environment:
+        MYSQL_ROOT_PASSWORD: "admin"
+        MYSQL_DATABASE: "emulator"
+        MYSQL_USER: "emulator"
+        MYSQL_PASSWORD: "emulator"
+    ports:
+      - "3306:3306"
+    labels:
+      - dev.orbstack.http-port=3306
