Changed socket message handler to use a pipeline

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
         "emitDecoratorMetadata": true,
         "esModuleInterop": true,
         "baseUrl": "./src",
+        "resolveJsonModule": true,
     }
 }
